--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for="check" class="checkbtn">
           <i class='bx bx-menu'></i>
         </label>
-        <label class="logo">JONATHAN EGBE</label>
+        <label class="logo">JONATHAN </label>
         <ul>
           <li><a class="active" href="#home">Home</a></li>
           <li><a class="active" href="#about">About</a></li>
